--- a/pages/cart/main.wxml
+++ b/pages/cart/main.wxml
@@ -1,2 +1,40 @@
 <!--pages/cart/main.wxml-->
-<text>pages/cart/main.wxml</text>
+<view class="main">
+  <!-- 头部 -->
+  <view class="header">
+    <text>30天无忧退货</text>
+    <text>48小时快速退款</text>
+    <text>满88元免邮费</text>
+  </view>
+  <!-- 购物车列表 -->
+  <view class="cartlist">
+    <view class="item" wx:for="{{cartdata}}" wx:key="{{index}}">
+      <view class="selected" catchtap="goSelected" data-index="{{index}}">
+        <image src="http://nos.netease.com/mailpub/hxm/yanxuan-wap/p/20150730/style/img/icon-normal/checkbox-0e09baa37e.png"   wx:if="{{isSelected[index]}}"></image>
+        <image src="http://nos.netease.com/mailpub/hxm/yanxuan-wap/p/20150730/style/img/icon-normal/checkbox-checked-822e54472a.png" wx:if="{{!isSelected[index]}}"></image>
+      </view>
+      <view class="agood">
+        <image src="{{item.list_pic_url}}">
+        </image>
+        <view class="nameandmoney">
+          <text>{{item.goods_name}}</text>
+          <text>￥{{item.retail_price}}</text>
+        </view>
+        <text class="number">
+                 X{{item.number}}
+                </text>
+      </view>
+      <text class="delet">删除</text>
+    </view>
+  </view>
+  <!-- 下单固定栏 -->
+  <view class="orders">
+    <view class="selected" catchtap="goSelectAll">
+      <image src="http://nos.netease.com/mailpub/hxm/yanxuan-wap/p/20150730/style/img/icon-normal/checkbox-0e09baa37e.png" wx:if="{{isAllSelected}}"></image>
+      <image src="http://nos.netease.com/mailpub/hxm/yanxuan-wap/p/20150730/style/img/icon-normal/checkbox-checked-822e54472a.png" wx:if="{{!isAllSelected}}"></image>
+    </view>
+    <text class="allselect">全选({{selectNumber}})</text>
+    <text class="allmoney">￥{{allMoney}}</text>
+    <text class="order">下单</text>
+  </view>
+</view>
