--- a/pages/cart/main.wxss
+++ b/pages/cart/main.wxss
@@ -1,1 +1,32 @@
 /* pages/cart/main.wxss */
+
+.main {
+  width: 750rpx;
+  background: #f4f4f4;
+}
+/* 头部介绍 */
+.main .header {
+  width: 100%;
+  height: 92rpx;
+  display: flex;
+  justify-content: space-between;
+  padding: 30rpx 20rpx;
+  box-sizing: border-box;
+}
+
+.main .header text {
+  padding-left: 30rpx;
+  display: flex;
+  align-items: center;
+  font-size: 25rpx;
+  color: #666;
+  background: url(http://nos.netease.com/mailpub/hxm/yanxuan-wap/p/20150730/style/img/icon-normal/servicePolicyRed-518d32d74b.png) 0rpx center no-repeat;
+  background-size: 10rpx;
+}
+
+/* 头部结束 */
+/* 购物车列表 */
+.main .cartlist{
+    
+}
+
