--- a/pages/cart/main.wxss
+++ b/pages/cart/main.wxss
@@ -4,7 +4,9 @@
   width: 750rpx;
   background: #f4f4f4;
 }
+
 /* 头部介绍 */
+
 .main .header {
   width: 100%;
   height: 92rpx;
@@ -25,8 +27,123 @@
 }
 
 /* 头部结束 */
+
 /* 购物车列表 */
-.main .cartlist{
-    
+
+.main .cartlist {
+  width: 100%;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
 }
 
+.main .cartlist .item {
+  border-bottom: 2rpx solid #f4f4f4;
+  display: flex;
+  width: 100%;
+  height: 160rpx;
+  padding: 20rpx 30rpx;
+  position: relative;
+}
+
+.mainn .cartlist .item .selected {
+  width: 34rpx;
+  display: inline-flex;
+  height: 160rpx;
+}
+
+.main .cartlist .item .selected image {
+  width: 34rpx;
+  height: 34rpx;
+  margin: 0 20rpx;
+  padding-top: 60rpx;
+}
+
+.main .cartlist .item .agood {
+  width: 716rpx;
+  height: 142rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.main .cartlist .item .agood image {
+  width: 124rpx;
+  height: 124rpx;
+  background: #f4f4f4;
+}
+
+.main .cartlist .item .agood .nameandmoney {
+  display: flex;
+  flex-direction: column;
+  line-height: 40rpx;
+  padding-left: 30rpx;
+  width: 300rpx;
+}
+
+.main .cartlist .item .agood .nameandmoney text {
+  font-size: 28rpx;
+  color: #333;
+}
+
+.main .cartlist .item .agood .number {
+  flex: 1;
+  text-align: center;
+  font-size: 24rpx;
+  padding-bottom: 20rpx;
+}
+
+.main .cartlist .item text.delet {
+  position: absolute;
+  width: 100rpx;
+  top: 0;
+  right: -100rpx;
+  text-align: center;
+  height: 100%;
+  background: #b4282d;
+  color: #fff;
+  transition: all 200ms ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* 固定栏 */
+.main .orders {
+  width: 750rpx;
+  height: 100rpx;
+  position: fixed;
+  bottom: 0rpx;
+  display: flex;
+}
+
+.main .orders .selected image {
+  width: 34rpx;
+  height: 34rpx;
+  margin: 0 20rpx;
+  padding-top: 34rpx;
+}
+
+.main .orders .allselect {
+  font-size: 28rpx;
+  color: #333;
+  /* padding-left: 40rpx; */
+  line-height: 100rpx;
+}
+
+.main .orders .allmoney {
+  padding-left: 350rpx;
+  line-height: 100rpx;
+  color: #b4282d;
+  padding-right: 50rpx;
+}
+
+.main .orders .order {
+  display: block;
+  width: 200rpx;
+  height: 100rpx;
+  line-height: 100rpx;
+  text-align: center;
+  font-size: 29rpx;
+  background: #b4282d;
+  color: #fff;
+}
