--- a/pages/editAddress/reEditAdress/main.wxml
+++ b/pages/editAddress/reEditAdress/main.wxml
@@ -1,2 +1,18 @@
-<!--pages/editAddress/reEditAdress/main.wxml-->
-<text>pages/editAddress/reEditAdress/main.wxml</text>
+<view class="main">
+<!-- 输入框 -->
+   <view class="input">
+    <input value="{{addrInfo.name}}" placeholder="姓名"></input>
+    <input value="{{addrInfo.mobile}}" placeholder="手机号码"></input>
+    <input value="{{addrInfo.address}}" placeholder="省份、城市、区县"></input>
+    <input value="{{addrInfo.address_detail}}" placeholder="详细地址、如楼道、楼盘号等"></input>
+   </view>
+  <!-- 默认地址设置 -->
+   <view class="setDefault">
+     <view>
+      <checkbox></checkbox><label>设置为默认地址</label>
+     </view>
+      <text style="color:green">一键导入微信></text>
+   </view>
+   <!-- 保存 -->
+   <view class="save">保存</view>
+</view>
