--- a/pages/editAddress/reEditAdress/main.wxss
+++ b/pages/editAddress/reEditAdress/main.wxss
@@ -1,1 +1,44 @@
-/* pages/editAddress/reEditAdress/main.wxss */
+.main {
+  width: 750rpx;
+  background: #fff;
+  padding: 30rpx;
+  box-sizing: border-box;
+  font-size: 28rpx;
+  color: #333;
+}
+
+.main .input {
+  width: 100%;
+  height: 364rpx;
+  display: flex;
+  flex-direction: column;
+}
+
+.main .input input {
+  width: 100%;
+  padding: 20rpx;
+  height: 90rpx;
+  border-bottom: 1rpx solid #f4f4f4;
+}
+
+/* 设置默认地址 */
+
+.main .setDefault {
+  margin-top: 60rpx;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* 保存 */
+.main .save {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  height: 100rpx;
+  line-height: 100rpx;
+  background: #b4282d;
+  color: #fff;
+  font-size: 32rpx;
+}
