--- a/pages/index/main.wxss
+++ b/pages/index/main.wxss
@@ -178,3 +178,82 @@
 .index .newgoods.two .bgbox text.lookall {
   background: #f4e9cb;
 }
+
+/* 专题精选 */
+
+.index .topicList {
+  height: 570rpx;
+  width: 100%;
+  padding-bottom: 20rpx;
+  display: flex;
+  flex-direction: column;
+  /* background: green; */
+  font-size: 28rpx;
+  color: #333;
+  margin-top: 10rpx;
+}
+
+.index .topicList .title {
+  line-height: 100rpx;
+  text-align: center;
+  background: #fff; 
+  vertical-align: center
+}
+
+.index .topicList .title .titleMain {
+  padding-right: 10rpx;
+}
+
+.index .topicList .title image {
+  width: 32rpx;
+  height: 32rpx;
+  vertical-align: middle;
+}
+
+.index .topicList scroll-view {
+  height: 454rpx;
+  white-space: nowrap;
+  background: #fff;
+}
+
+.index .topicList scroll-view .goodsitem {
+  width: 574rpx;
+  padding: 0rpx 15rpx 15rpx 15rpx;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.index .topicList scroll-view .goodsitem image {
+  height: 324rpx;
+  width: 574rpx;
+}
+
+.index .topicList scroll-view .goodsitem .title {
+  display: flex;
+  justify-content: space-between;
+  height: 40rpx;
+  line-height: 40rpx;
+}
+
+.index .topicList scroll-view .goodsitem .title .name {
+  font-size: 30rpx;
+  font-weight: bold;
+  margin-top: 8rpx;
+}
+
+.index .topicList scroll-view .goodsitem .title .money {
+  margin-top: 8rpx;
+  color: #9c3232;
+  font-size: 24rpx;
+}
+
+.index .topicList scroll-view .goodsitem .desc {
+  width: 90%;
+  color: #8a8a8a;
+  font-size: 24rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-top: 10rpx;
+line-height: 40rpx;
+}
